--- a/templates/account.html
+++ b/templates/account.html
@@ -155,7 +155,7 @@
         <!-- Title -->
         <div class="account_report_title col-3 text-start">
             <a href="{% url 'report_details' report.pk  %}">
-                <h5>{{ report.title }}</h5>
+                <h4 class="report-list-title">{{ report.title }}</h4>
             </a>
             <p>{{ report.activity_category|title }}</p>
         </div>
