--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
         <div id="nav-pos" class="container-fluid d-sm-flex justify-content-sm-center">
 
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img id="logo" src="{% static 'images/logo-name.png' %}" alt="Reach logo">
+                <img id="logo" src="{% static 'images/logo-name.png' %}" width="auto" height="75" alt="Reach logo">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
@@ -151,13 +151,13 @@
             <div id="sociallinks" class="text-end col-6 col-sm-3 d-sm-flex flex-column">
                 <h5 class="d-block">Social Links:</h5>
                 <div>
-                    <a href="https://www.youtube.com/" target="_blank">
+                    <a href="https://www.youtube.com/" target="_blank" aria-label="Click to check our Youtube channel">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Click to check our Instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="https://www.facebook.com/" target="_blank">
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Click to check our Facebook">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                 </div>
