--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/3440ecbefc.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" type="image/x-icon" href="/static/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -39,7 +39,7 @@
         <div id="nav-pos" class="container-fluid d-sm-flex justify-content-sm-center">
 
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img id="logo" src="{% static 'images/logo-name.png' %}" width="auto" height="75" alt="Reach logo">
+                <img id="logo" src="{% static 'images/logo-name.png' %}" width="300" height="75" alt="Reach logo">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
