Update password and email verification buttons

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -29,7 +29,7 @@
             <form class="login col-12 col-sm-9 col-md-12 col-lg-9 border-bottom border-primary pb-3" method="POST" action="{% url 'account_reset_password' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input class="primaryAction btn signup_button col-12" type="submit" value="{% trans 'Reset My Password' %}" />
+                <input class="primaryAction btn btn-success col-12" type="submit" value="{% trans 'Reset My Password' %}" />
             </form>
             <h5 class="mt-3 col-lg-9 text-center">
                 {% trans "Please contact us if you have any trouble resetting your password." %}
