--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -21,7 +21,7 @@
                 {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please
                 request a new reset link below.{% endblocktrans %}
             </h4>
-            <a class="btn signup_button" href="{{ passwd_reset_url }}">New Reset Link</a>
+            <a class="btn btn-success col-4" href="{{ passwd_reset_url }}">New Reset Link</a>
         </div>
         {% else %}
         <div class="account-form bg-light col-md-8 offset-md-2 offset-md-2 col-lg-6 offset-lg-3">
@@ -29,7 +29,7 @@
             <form class="col-12 col-sm-9 col-md-12 col-lg-9 pb-3" method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input class="btn signup_button col-12" type="submit" name="action" value="{% trans 'change password' %}" />
+                <input class="btn btn-success col-12" type="submit" name="action" value="{% trans 'Update Password' %}" />
             </form>
         </div>
         {% endif %}
