--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
 <div class="container-fluid text-center mt-5">
     <h1>404 error</h1>
     <h6>Sorry, page not found. Stick to the route!</h6>
-    <a href="{% url 'home' %}" class="m-sm-3 btn signup_button">
+    <a href="{% url 'home' %}" class="m-sm-3 btn btn-dark">
         Back to Home
     </a>
 </div>
