--- a/templates/500.html
+++ b/templates/500.html
@@ -6,7 +6,7 @@
 <div class="container-fluid text-center mt-5">
     <h1>500 error</h1>
     <h6>Sorry, server error. Click below to get back on track!</h6>
-    <a href="{% url 'home' %}" class="m-sm-3 btn signup_button">
+    <a href="{% url 'home' %}" class="m-sm-3 btn btn-dark">
         Back to Home
     </a>
 </div>
