--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -29,7 +29,7 @@
             <form method="POST" action="{% url 'account_change_password' %}" class="password_change col-12 col-sm-9 col-md-12 col-lg-9 pb-3">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn signup_button col-12" type="submit" name="action">{% trans "Change Password" %}</button>
+                    <button class="btn btn-success col-12" type="submit" name="action">{% trans "Change Password" %}</button>
             </form>
             <a class="text-center border-bottom border-primary col-12 col-md-9 pb-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
             <h5 class="mt-3 col-lg-9 text-center">
