--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -29,7 +29,7 @@
                 Otherwise
                 contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
                 <br>
-                <a class="btn signup_button" href="{% url 'home' %}">Back to Home</a>
+                <a class="btn btn-dark col-4" href="{% url 'home' %}">Back to Home</a>
             </p>            
         </div>
     </div>
