--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -16,7 +16,7 @@
             <h4 class="text-center mt-2">
                 {% trans 'Your password has been updated successfully.<br>Please Login again.' %}
             </h4>
-            <a class="btn signup_button col-sm-9 col-md-12 col-lg-9" href="{% url 'account_login' %}">Login</a>
+            <a class="btn btn-success col-sm-9 col-md-12 col-lg-9" href="{% url 'account_login' %}">Login</a>
         </div>
         
     </div>
