Tweak styling for safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -340,6 +340,13 @@ label {
     border-color: #2596be;
 }
 
+/* Override Safari Styles */
+
+[type="submit"] {
+    appearance: none;
+    -webkit-appearance: none;
+}
+
 /* Media Queries */
 
 /* L screens, Bootstrap <large breakpoint */
